# Caroline

./: .gitignore  CONTRIBUTING.md  Dockerfile_proxy  LICENSE  README.md  build_containers.sh  deploy.sh  requirements.txt  roundtable.conf  server.conf  setup.py
.github/workflows/: codeql-analysis.yml  linux.yaml  pypi_linux.yaml
caroline/: __init__.py  caroline.py
caroline/example/: __init__.py  __main__.py  presentation.html  presentation_audience.html  presentation_code.py
caroline/example/presentation_files/: bending-light_en.html
caroline/folder2presentation/: __main__.py
caroline/html/: index.html  manifest.json  minify.sh  package-lock.json  package.json  presentation.html  roundtable.html
caroline/html/fonts/: open-sans-v20-latin-ext_latin_greek-ext_greek-600italic.eot  open-sans-v20-latin-ext_latin_greek-ext_greek-700italic.eot  open-sans-v20-latin-ext_latin_greek-ext_greek-regular.eot  philosopher-v14-latin-regular.eot
caroline/html/js/: caroline.js  export_functions.js  externs.js  highlight.min.js  nbv.js  roundtable.js
caroline/html/style/: roundtable_style.css  style_bright.css
caroline/html_dist/: index.html
caroline/html_dist/fonts/: open-sans-v20-latin-ext_latin_greek-ext_greek-600.eot  philosopher-v14-latin-700.eot  (+1 more)
caroline/preview/: __main__.py
caroline/server/: Dockerfile  caroline_relay_server.py  pyproject.toml
caroline/template/: __main__.py  presentation.html  presentation_code.py
caroline/template_quiz/: __main__.py  presentation.html  presentation_audience.html  presentation_code.py
doc/: faq.md  start.md
(+4 files in other folders)
